--- a/src/main/ui/src/sass/main.scss
+++ b/src/main/ui/src/sass/main.scss
@@ -5,5 +5,7 @@
 
 @import "components/login";
 @import "components/dialog";
+@import "components/header";
+@import "components/card";
 
 @import "layout/content";
